# fusion-demo

./: .gitignore  BUILD.txt  Makefile  Makefile.Debug  Makefile.Release  Omain.cpp  main.cpp  scatter.pro  scatterdatamodifier.cpp  scatterdatamodifier.h  sm.csv  smTestData.csv  smTestDataC.csv  testData.csv  wrnch.pro
wrnch/: ArrayArithmetic.h  CMakeLists.txt  Camera.cpp  Camera.h  Device.cpp  Device.h  DeviceState.cpp  DeviceState.h  IMU.cpp  IMU.h  MDKalman.h  kalman.cpp  kalman.h  main.cpp
wrnch/etk/: conversions.h  etk.h
